#time 0h 30m fixing issue with phone number overlapping the nav menu on mobile devices

--- a/src/sass/navigation.scss
+++ b/src/sass/navigation.scss
@@ -166,6 +166,7 @@ i.fa.fa-phone {
       top: 35px;
       left: 0;
       right: 0;
+      width: 50%;
     }
   }
 
