--- a/webapp/business/static/css/workforce.css
+++ b/webapp/business/static/css/workforce.css
@@ -1033,6 +1033,7 @@ i.fa.fa-phone {
     top: 35px;
     left: 0;
     right: 0;
+    width: 50%;
   }
 
   .main-navigation__container > a {
