--- a/webapp/static/css/styles.css
+++ b/webapp/static/css/styles.css
@@ -493,6 +493,7 @@ i.fa.fa-phone {
     top: 35px;
     left: 0;
     right: 0;
+    width: 50%;
   }
 
   .main-navigation__container > a {
